fallback to public profile if no token is available, small refactorings and fixes, adjust and add more unit tests